tests/valid/ListAppend_Valid_1.whiley
void main([string] args):
    r = [1,2] + [3,4]
    println(str(r))
